Atualização -> Refatoramento (Códigos)